--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,7 @@ serde_json = "1.0"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 ws = "0.9.2"
+base64 = "0.21.7"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
